--- a/WishList/WishList.csproj
+++ b/WishList/WishList.csproj
@@ -9,7 +9,7 @@
     <Folder Include="Views\Home\" />
     <Folder Include="Controllers\" />
     <Folder Include="Data\" />
-    <Folder Include="Model\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
